force-app/main/default/objects/Candidate__b/Candidate__b.object-meta.xml
<CustomObject>
    <description>All Candidates.  The all candidates file contains summary financial information for each candidate who raised or spent money during the period, regardless of when they are up for election.</description>
    <label>Candidate</label>
    <pluralLabel>Candidates</pluralLabel>
</CustomObject>