force-app/main/default/objects/Candidate__b/fields/CAND_ID__c.field-meta.xml
<CustomField>
    <fullName>CAND_ID__c</fullName>
    <label>Candidate ID</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>