force-app/main/default/objects/Candidate__b/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <description>This field indicates that there has been a match.</description>
    <inlineHelpText>Use for indicate if the record has been matched with an existing record.</inlineHelpText>
    <label>Matched</label>
    <length>10</length>
    <type>Text</type>
</CustomField>